--- a/index.html
+++ b/index.html
@@ -52,47 +52,32 @@
                 <img src="img/inicio/vision1.jpg" class="intro" alt="">
             </article>
         </section>
-        <div id="Carrusel">
-            <div class="itemcarrusel" id="itemCarrusel-1">
-                <div class="tarjetaCarrusel" id="tarjetaCarrusel-1">
-                    <img src="img/inicio/Productos.png" class="img-carrusel" alt="">
-                </div>
-                <div class="flechasCarrusel">
-                    <a href="#itemCarrusel-3">
-                        <i class="fa-solid fa-arrow-left"></i>
-                    </a>
-                    <a href="#itemCarrusel-2">
-                        <i class="fa-solid fa-arrow-right"></i>
-                    </a>
-                </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="itemcarrusel" id="itemCarrusel-2">
-                <div class="tarjetaCarrusel" id="tarjetaCarrusel-2">
-                    <img src="img/inicio/Impresión del carrusel _ Zazzle_com.jpg" class="img-carrusel" alt="">
-                </div>
-                <div class="flechasCarrusel">
-                    <a href="#itemCarrusel-1">
-                        <i class="fa-solid fa-arrow-left"></i>
-                    </a>
-                    <a href="#itemCarrusel-3">
-                        <i class="fa-solid fa-arrow-right"></i>
-                    </a>  
-                </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/inicio/Impresión del carrusel _ Zazzle_com.jpg" class="d-block w-100" alt="..." width="100%" height="500">
+              </div>
+              <div class="carousel-item">
+                <img src="img/inicio/Descubren pasadizos ocultos que habrían sido usados en antiguos rituales psicodélicos.jpg" class="d-block w-100" alt="..." width="100%" height="500">
+              </div>
+              <div class="carousel-item">
+                <img src="img/inicio/natalia-yakovleva-f5xddISq428-unsplash.jpg" class="d-block w-100" alt="..." width="100%" height="500">
+              </div>
             </div>
-            <div class="itemcarrusel" id="itemCarrusel-3">
-                <div class="tarjetaCarrusel" id="tarjetaCarrusel-3">
-                    <img src="img/inicio/Are You a Millennial Boss_ Here's How to Work With Boomers and Xers.png" class="img-carrusel" alt="">
-                </div>
-                <div class="flechasCarrusel">
-                    <a href="#itemCarrusel-2">
-                        <i class="fa-solid fa-arrow-left"></i>
-                    </a>
-                    <a href="#itemCarrusel-1">
-                        <i class="fa-solid fa-arrow-right"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         <section class="Caja2">
             <article class="articles2">
                 <h2>Misión</h2>
