--- a/index.html
+++ b/index.html
@@ -52,28 +52,23 @@
                 <img src="img/inicio/vision1.jpg" class="intro" alt="">
             </article>
         </section>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
+          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="img/inicio/Impresión del carrusel _ Zazzle_com.jpg" class="d-block w-100" alt="..." width="100%" height="500">
+              <div class="carousel-item active" data-bs-interval="10000">
+                <img src="img/inicio/natalia-yakovleva-f5xddISq428-unsplash.jpg" class="d-block w-100" alt="..." width="100%" height="500">
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" data-bs-interval="2000">
                 <img src="img/inicio/Descubren pasadizos ocultos que habrían sido usados en antiguos rituales psicodélicos.jpg" class="d-block w-100" alt="..." width="100%" height="500">
               </div>
               <div class="carousel-item">
-                <img src="img/inicio/natalia-yakovleva-f5xddISq428-unsplash.jpg" class="d-block w-100" alt="..." width="100%" height="500">
+                <img src="img/inicio/Impresión del carrusel _ Zazzle_com.jpg" class="d-block w-100" alt="..." width="100%" height="500">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
