--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
 
         <section class="Caja1">
             <article class="articles1">
-                <h2>Taki Kapchiy</h2>
-                    <p> Somos Taki Kapchiy una empresa dedicada a la promoción y venta de instrumentos andinos peruanos, aqui encontraras una gran diversidad de instrumentos segun sus categorias, además tendras opciones de personalización para cada uno de ellos y no solo eso, podras conocer la historia que hay detras de cada instrumento musical andino peruano
-                    .</p>
+                <h2 class="titulo_intro">Taki Kapchiy</h2>
+                    <p> Somos Taki Kapchiy una empresa dedicada a la promoción y venta de instrumentos andinos peruanos, aqui encontraras una gran diversidad de instrumentos segun sus categorias, además tendras opciones de personalización para cada uno de ellos y no solo eso, podras conocer la historia que hay detras de cada instrumento musical andino peruano.</p>
                     <br>
                     <p>
                         Exploremos juntos las mas diversas melodias de los andes peruanos y todo lo que se puede llegar a crear con cada uno de nuestros instrumentos.
@@ -52,6 +51,7 @@
                 <img src="img/inicio/vision1.jpg" class="intro" alt="">
             </article>
         </section>
+        <div class="carrusel">
           <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
@@ -73,6 +73,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+        </div>
         <section class="Caja2">
             <article class="articles2">
                 <h2>Misión</h2>
