--- a/historia.html
+++ b/historia.html
@@ -421,6 +421,22 @@
             </div>
         </div>
     </section>
+    <section>
+        <div id="links">
+            <div class="izq">
+                <img class="cir" src="img/historia/links/ministerio.png" alt="">
+                <button>Ministerio de Cultura</button>
+            </div>
+            <div class="mid">
+                <img class="cir" src="img/historia/links/playlist.png" alt="">
+                <button>Play List Andino</button>
+            </div>
+            <div class="der">
+                <img class="cir" src="img/historia/links/entrevistas.png" alt="">
+                <button>Entrevistas</button>
+            </div>
+        </div>
+    </section>
 
     <footer class="pie-pagina">
         <div class="logo-pie">
