--- a/contactos.html
+++ b/contactos.html
@@ -1,13 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/menu-bar.css">
+    <link rel="stylesheet" href="css/contactos.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            <a href="index.html" class="enlace">
+                <img src="img/logo/Logo_sin_slogan-removebg-preview.png" alt="" class="logo">
+            </a>
+            <ul class="menu">
+                <li><a href="">Inicio</a></li>
+                <li><a href="instrumentos.html">Instrumentos</a></li>
+                <li><a href="historia.html">Historia</a></li>
+                <li><a class="active" href="contactos.html">Contactos</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Contactos</h1>
+        <section>
+            <form class="formulario row g-12 needs-validation">
+                <p>Para un mejor contacto, contestar este formulario</p>
+                <br>
+                <div class="col-md-12">
+                    <label for="Nombres" class="form-label">Nombre y Apellidos</label>
+                    <input type="text" class="input-text" name="Nombres" id="Nombres" required
+                        placeholder="Nombre y Apellidos">
+                </div>
+                <div class="col-md-12">
+                    <label for="Telefono" class="form-label">N° Telefóno</label>
+                    <input type="tel" name="Telefono" id="Telefono" class="input-text" required
+                        placeholder="(XX) XXXX XXXX">
+                </div>
+                <div class="col-md-12">
+                    <label for="Correo" class="form-label">Correo</label>
+                    <input type="email" name="Correo" id="Correo" class="input-text" required
+                        placeholder="example@host.com">
+                </div>
+                <div class="col-md-12">
+                    <label for="Asunto" class="form-label">Asunto</label>
+                    <input type="text" name="Asunto" id="Asunto" class="input-text" placeholder="Asunto">
+                </div>
+                <div class="col-md-12">
+                    <label for="Mensaje" class="form-label">Mensaje del Asunto</label>
+                    <textarea name="Mensaje" id="Mensaje" class="input-text" cols="30" rows="10"></textarea>
+                </div>
+                <div class="col-md-12">
+                    <fieldset>
+                        <legend>¿Cómo le gustaria que le contactemos?</legend>
+                        <label for="radio-email"><input type="radio" name="Contacto" value="Email" id="radio-email"
+                                checked>Email</label>
+                        <label for="radio-telefono"><input type="radio" name="Contacto" value="Telefono"
+                                id="radio-telefono">Telefóno</label>
+                        <label for="radio-whatsapp"><input type="radio" name="Contacto" value="Whatsapp"
+                                id="radio-whatsapp">WhatsApp</label>
+                    </fieldset>
+
+                    <fieldset>
+                        <legend>¿En cual horario le gustaria recibir nuestro mensaje?</legend>
+                        <select class="select-input">
+                            <option disabled>Elija una Opción</option>
+                            <option value="1">Mañana</option>
+                            <option value="2">Tarde</option>
+                            <option value="3">Noche</option>
+                        </select>
+                    </fieldset>
+                </div>
+                <div class="col-md-12">
+                    <input class="enviar" type="button" value="Enviar">
+                </div>
+            </form>
+        </section>
+
+        <section class="division">
+            <div>
+                <div>
+                    <img src="" alt="Imagen de facebook">
+                    <p>Facebook</p>
+                    <a class="l-rs" href="#">Link de Facebook</a>
+                </div>
+                <div>
+                    <img src="" alt="Imagen de Instagram">
+                    <p>Instagram</p>
+                    <a class="l-rs" href="#">Link de Instagram</a>
+                </div>
+                <div>
+                    <img src="" alt="Imagen del número de Whatsapp">
+                    <p>Whatsapp</p>
+                    <p class="l-rs">555-5555</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="mapa">
+            <div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.855033867364!2d-77.03271235956528!3d-12.122069643358802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c81903e94aed%3A0x4b09800509f16648!2sCa.%20Lima%20101%2C%20Miraflores%2015074!5e0!3m2!1ses-419!2spe!4v1672930819994!5m2!1ses-419!2spe"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <img src="" alt="Imagen de google maps">
+                <h4>Cl. Lima 101,</h4>
+                <h4>Miraflores 15074</h4>
+            </div>
+
+        </section>
+    </main>
+    <footer class="pie-pagina">
+        <div class="logo-pie">
+            <img src="img/logo/LOGO.png" alt="">
+        </div>
+        <div class="txt-footer">
+            <p>Grupo Taki Kapchiy - Todos los derechos &copy; reservados </p>
+        </div>
+        <div class="rs">
+            <a href=""><img src="img/iconos/instagram.png" alt="instagram/png" class="ico-rs"></a>
+            <a href=""><img src="img/iconos/facebook.png" alt="facebook/png" class="ico-rs"></a>
+            <a href=""><img src="img/iconos/whatsapp.png" alt="whatsapp/png" class="ico-rs"></a>
+        </div>
+    </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/4edbf8ff12.js" crossorigin="anonymous"></script>
+
 </html>
