--- a/instrumentos.html
+++ b/instrumentos.html
@@ -463,21 +463,21 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img/Instrumentos/Cuerda/Banjo/Banjo1.png" class="d-block w-100" alt="...">
+                  <img src="img/Instrumentos/Cuerda/Banjo/Banjo1.png" class="d-block w-100" alt="Imagen de un Pingullo">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="de">Descripción</h5>
                     <p class="iz">Precio</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="img/Instrumentos/Cuerda/Banjo/Banjo2.png" class="d-block w-100" alt="...">
+                  <img src="img/Instrumentos/Cuerda/Banjo/Banjo2.png" class="d-block w-100" alt="Imagen de un Pingullo">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="de">Descripción</h5>
                     <p class="iz">Precio</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="img/Instrumentos/Cuerda/Banjo/Banjo3.png" class="d-block w-100" alt="...">
+                  <img src="img/Instrumentos/Cuerda/Banjo/Banjo3.png" class="d-block w-100" alt="Imagen de un Pingullo">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="de">Descripción</h5>
                     <p class="iz">Precio</p>
@@ -515,21 +515,21 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img/Instrumentos/Cuerda/Banjo/Banjo1.png" class="d-block w-100" alt="...">
+                  <img src="img/Instrumentos/Cuerda/Banjo/Banjo1.png" class="d-block w-100" alt="Imagen de una Ocarina">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="de">Descripción</h5>
                     <p class="iz">Precio</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="img/Instrumentos/Cuerda/Banjo/Banjo2.png" class="d-block w-100" alt="...">
+                  <img src="img/Instrumentos/Cuerda/Banjo/Banjo2.png" class="d-block w-100" alt="Imagen de una Ocarina">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="de">Descripción</h5>
                     <p class="iz">Precio</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="img/Instrumentos/Cuerda/Banjo/Banjo3.png" class="d-block w-100" alt="...">
+                  <img src="img/Instrumentos/Cuerda/Banjo/Banjo3.png" class="d-block w-100" alt="Imagen de una Ocarina">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="de">Descripción</h5>
                     <p class="iz">Precio</p>
