--- a/contactos.html
+++ b/contactos.html
@@ -22,7 +22,7 @@
                 <img src="img/logo/Logo_sin_slogan-removebg-preview.png" alt="" class="logo">
             </a>
             <ul class="menu">
-                <li><a href="">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="instrumentos.html">Instrumentos</a></li>
                 <li><a href="historia.html">Historia</a></li>
                 <li><a class="active" href="contactos.html">Contactos</a></li>
@@ -38,17 +38,17 @@
                 <br>
                 <div class="col-md-12">
                     <label for="Nombres" class="form-label">Nombre y Apellidos</label>
-                    <input type="text" class="input-text" name="Nombres" id="Nombres" required
+                    <input type="text" class="input-text" required name="Nombres" id="Nombres" 
                         placeholder="Nombre y Apellidos">
                 </div>
                 <div class="col-md-12">
                     <label for="Telefono" class="form-label">N° Telefóno</label>
-                    <input type="tel" name="Telefono" id="Telefono" class="input-text" required
+                    <input type="tel" name="Telefono" required id="Telefono" class="input-text" 
                         placeholder="(XX) XXXX XXXX">
                 </div>
                 <div class="col-md-12">
                     <label for="Correo" class="form-label">Correo</label>
-                    <input type="email" name="Correo" id="Correo" class="input-text" required
+                    <input type="email" name="Correo" required id="Correo" class="input-text" 
                         placeholder="example@host.com">
                 </div>
                 <div class="col-md-12">
@@ -81,27 +81,28 @@
                     </fieldset>
                 </div>
                 <div class="col-md-12">
-                    <input class="enviar" type="button" value="Enviar">
+                    <input class="enviar" type="submit" value="Enviar">
                 </div>
             </form>
         </section>
 
         <section class="division">
-            <div>
-                <div>
-                    <img src="" alt="Imagen de facebook">
-                    <p>Facebook</p>
+            <div class="division-contenedor">
+                <div class="div1">
+                    <img class="division-imagen" src="img/iconos/facebook.png" alt="Imagen de facebook">
+                    <p class="division-frase">Facebook</p>
                     <a class="l-rs" href="#">Link de Facebook</a>
                 </div>
-                <div>
-                    <img src="" alt="Imagen de Instagram">
-                    <p>Instagram</p>
+                <div class="div1">
+                    <img class="division-imagen" src="img/iconos/instagram.png" alt="Imagen de Instagram">
+                    <p class="division-frase">Instagram</p>
                     <a class="l-rs" href="#">Link de Instagram</a>
                 </div>
-                <div>
-                    <img src="" alt="Imagen del número de Whatsapp">
-                    <p>Whatsapp</p>
-                    <p class="l-rs">555-5555</p>
+                <div class="div1">
+                    <img class="division-imagen" src="img/iconos/whatsapp.png" alt="Imagen del número de Whatsapp">
+                    <p class="division-frase">Whatsapp</p>
+                    <a class="l-rs" href="#">Link de Whatsapp</a>
+                     
                 </div>
             </div>
         </section>
