--- a/contactos.html
+++ b/contactos.html
@@ -89,17 +89,17 @@
         <section class="division">
             <div class="division-contenedor">
                 <div class="div1">
-                    <img class="division-imagen" src="img/iconos/facebook.png" alt="Imagen de facebook">
+                    <img class="division-imagen" id="uno" src="img/Instrumentos/Facebook.png" alt="Imagen de facebook">
                     <p class="division-frase">Facebook</p>
                     <a class="l-rs" href="#">Link de Facebook</a>
                 </div>
                 <div class="div1">
-                    <img class="division-imagen" src="img/iconos/instagram.png" alt="Imagen de Instagram">
+                    <img class="division-imagen" id="dos" src="img/Instrumentos/Instagram.png" alt="Imagen de Instagram">
                     <p class="division-frase">Instagram</p>
                     <a class="l-rs" href="#">Link de Instagram</a>
                 </div>
                 <div class="div1">
-                    <img class="division-imagen" src="img/iconos/whatsapp.png" alt="Imagen del número de Whatsapp">
+                    <img class="division-imagen" id="tres" src="img/Instrumentos/Whatsapp.png" alt="Imagen del número de Whatsapp">
                     <p class="division-frase">Whatsapp</p>
                     <a class="l-rs" href="#">Link de Whatsapp</a>
                      
@@ -107,15 +107,15 @@
             </div>
         </section>
 
-        <section class="mapa">
-            <div>
+        <section>
+            <div class="mapa">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.855033867364!2d-77.03271235956528!3d-12.122069643358802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c81903e94aed%3A0x4b09800509f16648!2sCa.%20Lima%20101%2C%20Miraflores%2015074!5e0!3m2!1ses-419!2spe!4v1672930819994!5m2!1ses-419!2spe"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <img src="" alt="Imagen de google maps">
-                <h4>Cl. Lima 101,</h4>
-                <h4>Miraflores 15074</h4>
+                <img class="mp-rs" src="img/Instrumentos/maps.png" alt="Imagen de google maps">
+                <h4 class="txt-mapa">Cl. Lima 101,
+                    Miraflores 15074</h4>
             </div>
 
         </section>
