--- a/contactos.html
+++ b/contactos.html
@@ -99,7 +99,7 @@
                     <a class="l-rs" href="#">Link de Instagram</a>
                 </div>
                 <div class="div1">
-                    <img class="division-imagen" id="tres" src="img/Instrumentos/Whatsapp.png" alt="Imagen del número de Whatsapp">
+                    <img class="division-imagen" id="tres" src="img/Instrumentos/Whatsapp.png" alt="Imagen de Whatsapp">
                     <p class="division-frase">Whatsapp</p>
                     <a class="l-rs" href="#">Link de Whatsapp</a>
                      
