--- a/contactos.html
+++ b/contactos.html
@@ -73,7 +73,7 @@
                     <fieldset>
                         <legend>¿En cual horario le gustaria recibir nuestro mensaje?</legend>
                         <select class="select-input">
-                            <option disabled>Elija una Opción</option>
+                            <option selected disabled>Elija una Opción</option>
                             <option value="1">Mañana</option>
                             <option value="2">Tarde</option>
                             <option value="3">Noche</option>
