--- a/contactos.html
+++ b/contactos.html
@@ -33,92 +33,103 @@
     <main>
         <h1>Contactos</h1>
         <section>
-            <form class="formulario row g-12 needs-validation">
-                <p>Para un mejor contacto, contestar este formulario</p>
-                <br>
-                <div class="col-md-12">
-                    <label for="Nombres" class="form-label">Nombre y Apellidos</label>
-                    <input type="text" class="input-text" required name="Nombres" id="Nombres" 
-                        placeholder="Nombre y Apellidos">
-                </div>
-                <div class="col-md-12">
-                    <label for="Telefono" class="form-label">N° Telefóno</label>
-                    <input type="tel" name="Telefono" required id="Telefono" class="input-text" 
-                        placeholder="(XX) XXXX XXXX">
-                </div>
-                <div class="col-md-12">
-                    <label for="Correo" class="form-label">Correo</label>
-                    <input type="email" name="Correo" required id="Correo" class="input-text" 
-                        placeholder="example@host.com">
-                </div>
-                <div class="col-md-12">
-                    <label for="Asunto" class="form-label">Asunto</label>
-                    <input type="text" name="Asunto" id="Asunto" class="input-text" placeholder="Asunto">
-                </div>
-                <div class="col-md-12">
-                    <label for="Mensaje" class="form-label">Mensaje del Asunto</label>
-                    <textarea name="Mensaje" id="Mensaje" class="input-text" cols="30" rows="10"></textarea>
-                </div>
-                <div class="col-md-12">
-                    <fieldset>
-                        <legend>¿Cómo le gustaria que le contactemos?</legend>
-                        <label for="radio-email"><input type="radio" name="Contacto" value="Email" id="radio-email"
-                                checked>Email</label>
-                        <label for="radio-telefono"><input type="radio" name="Contacto" value="Telefono"
-                                id="radio-telefono">Telefóno</label>
-                        <label for="radio-whatsapp"><input type="radio" name="Contacto" value="Whatsapp"
-                                id="radio-whatsapp">WhatsApp</label>
-                    </fieldset>
+            <aside>
+                <div class="formulario">
+                    <form class="row g-12 needs-validation">
+                        <p>Para un mejor contacto, contestar este formulario</p>
+                        <br>
+                        <div class="col-md-12">
+                            <label for="Nombres" class="form-label">Nombre y Apellidos</label>
+                            <input type="text" class="input-text" required name="Nombres" id="Nombres"
+                                placeholder="Nombre y Apellidos">
+                        </div>
+                        <p />
+                        <div class="col-md-12">
+                            <label for="Telefono" class="form-label">N° Telefóno</label>
+                            <input type="tel" name="Telefono" required id="Telefono" class="input-text"
+                                placeholder="(XX) XXXX XXXX">
+                        </div>
+                        <div class="col-md-12">
+                            <label for="Correo" class="form-label">Correo</label>
+                            <input type="email" name="Correo" required id="Correo" class="input-text"
+                                placeholder="example@host.com">
+                        </div>
+                        <div class="col-md-12">
+                            <label for="Asunto" class="form-label">Asunto</label>
+                            <input type="text" name="Asunto" id="Asunto" class="input-text" placeholder="Asunto">
+                        </div>
+                        <div class="col-md-12">
+                            <label for="Mensaje" class="form-label">Mensaje del Asunto</label>
+                            <textarea name="Mensaje" id="Mensaje" class="input-text" cols="30" rows="10"></textarea>
+                        </div>
 
-                    <fieldset>
-                        <legend>¿En cual horario le gustaria recibir nuestro mensaje?</legend>
-                        <select class="select-input">
-                            <option selected disabled>Elija una Opción</option>
-                            <option value="1">Mañana</option>
-                            <option value="2">Tarde</option>
-                            <option value="3">Noche</option>
-                        </select>
-                    </fieldset>
+                        <div class="col-md-12">
+                            <input class="enviar" type="submit" value="Enviar">
+                        </div>
+                    </form>
                 </div>
-                <div class="col-md-12">
-                    <input class="enviar" type="submit" value="Enviar">
+                <br>
+                <div class="contenedor-mapa">
+                    <section>
+                        <div class="mapa"><!--Subir el mapa al costado del formulario-->
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.855033867364!2d-77.03271235956528!3d-12.122069643358802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c81903e94aed%3A0x4b09800509f16648!2sCa.%20Lima%20101%2C%20Miraflores%2015074!5e0!3m2!1ses-419!2spe!4v1672930819994!5m2!1ses-419!2spe"
+                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade" class="sitio"></iframe>
+                            <img class="mp-rs" src="img/Contactos/google.mps.png" alt="Imagen de google maps">
+                            <h4 class="txt-mapa">Cl. Lima 101,
+                                Miraflores 15074</h4>
+                        </div>
+
+                    </section>
                 </div>
-            </form>
+            </aside>
         </section>
 
         <section class="division">
             <div class="division-contenedor">
-                <div class="div1">
-                    <img class="division-imagen" id="uno" src="img/Instrumentos/Facebook.png" alt="Imagen de facebook">
-                    <p class="division-frase">Facebook</p>
-                    <a class="l-rs" href="#">Link de Facebook</a>
-                </div>
-                <div class="div1">
-                    <img class="division-imagen" id="dos" src="img/Instrumentos/Instagram.png" alt="Imagen de Instagram">
-                    <p class="division-frase">Instagram</p>
-                    <a class="l-rs" href="#">Link de Instagram</a>
-                </div>
-                <div class="div1">
-                    <img class="division-imagen" id="tres" src="img/Instrumentos/Whatsapp.png" alt="Imagen de Whatsapp">
-                    <p class="division-frase">Whatsapp</p>
-                    <a class="l-rs" href="#">Link de Whatsapp</a>
-                     
+
+
+                <div class="carrusel">
+                    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="10000">
+                                <img src="img/Contactos/mensaje.png" class="d-block w-100" alt="..." width="100%"
+                                    height="500">
+                            </div>
+                            <div class="carousel-item" data-bs-interval="2000">
+                                <img src="img/Contactos/mujer.png" class="d-block w-100" alt="..." width="100%"
+                                    height="500">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/Contactos/telefono.png" class="d-block w-100" alt="..." width="100%"
+                                    height="500">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/Contactos/mobile.png" class="d-block w-100" alt="..." width="100%"
+                                    height="500">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/Contactos/cafe.png" class="d-block w-100" alt="..." width="100%"
+                                    height="500">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                 </div>
             </div>
-        </section>
+        </section><!--Modificar esto-->
 
-        <section>
-            <div class="mapa">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.855033867364!2d-77.03271235956528!3d-12.122069643358802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c81903e94aed%3A0x4b09800509f16648!2sCa.%20Lima%20101%2C%20Miraflores%2015074!5e0!3m2!1ses-419!2spe!4v1672930819994!5m2!1ses-419!2spe"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <img class="mp-rs" src="img/Instrumentos/maps.png" alt="Imagen de google maps">
-                <h4 class="txt-mapa">Cl. Lima 101,
-                    Miraflores 15074</h4>
-            </div>
 
-        </section>
     </main>
     <footer class="pie-pagina">
         <div class="logo-pie">
@@ -136,4 +147,5 @@
 </body>
 <script src="js/bootstrap.js"></script>
 <script src="https://kit.fontawesome.com/4edbf8ff12.js" crossorigin="anonymous"></script>
+
 </html>
