--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="img/inicio/Carrusel-2.png" class="d-block w-100" alt="..." width="100%" height="500">
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" data-bs-interval="2000">
                 <img src="img/inicio/Carrusel-1.png" class="d-block w-100" alt="..." width="100%" height="500">
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" data-bs-interval="2000">
                 <img src="img/inicio/carrusel4.png" class="d-block w-100" alt="..." width="100%" height="500">
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" data-bs-interval="2000">
                 <img src="img/inicio/carrusel-5.png" class="d-block w-100" alt="..." width="100%" height="500">
               </div>
             </div>
