--- a/contactos.html
+++ b/contactos.html
@@ -76,7 +76,7 @@
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.855033867364!2d-77.03271235956528!3d-12.122069643358802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c81903e94aed%3A0x4b09800509f16648!2sCa.%20Lima%20101%2C%20Miraflores%2015074!5e0!3m2!1ses-419!2spe!4v1672930819994!5m2!1ses-419!2spe"
                                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade" class="sitio"></iframe>
-                            <img class="mp-rs" src="img/contacto/google.mps.png" alt="Imagen de google maps">
+                            <img class="mp-rs" src="img/Contactos/google.mps.png" alt="Imagen de google maps">
                             <h4 class="txt-mapa">Cl. Lima 101,
                                 Miraflores 15074</h4>
                             </div>
