--- a/historia.html
+++ b/historia.html
@@ -306,7 +306,7 @@
             data-bs-parent="#collap1">
             <div class="row">
                 <div class="col-6">
-                    <img src="" alt="">
+                    <img src="img/historia/cordófonos/arpa.png" alt="">
                 </div>
                 <div class="col-6">
                     <div class="de">
@@ -336,13 +336,13 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <img src="" alt="">
+                    <img src="img/historia/cordófonos/guitarra.png" alt="">
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-6">
-                    <img src="" alt="">
+                    <img src="img/historia/cordófonos/charango.png" alt="">
                 </div>
                 <div class="col-6">
                     <div class="de">
@@ -376,13 +376,13 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <img src="" alt="">
+                    <img src="img/historia/cordófonos/violin.png" alt="">
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-6">
-                    <img src="" alt="">
+                    <img src="img/historia/cordófonos/bandurria.png" alt="">
                 </div>
                 <div class="col-6">
                     <div class="de">
@@ -404,7 +404,7 @@
             data-bs-parent="#collap1">
             <div class="row">
                 <div class="col-6">
-                    <img src="" alt="">
+                    <img src="img/historia/idiófonos/matraca.png" alt="">
                 </div>
                 <div class="col-6">
                     <div class="de">
@@ -439,13 +439,13 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <img src="" alt="">
+                    <img src="img/historia/idiófonos/chucho.png" alt="">
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-6">
-                    <img src="" alt="">
+                    <img src="img/historia/idiófonos/chajchas.png" alt="">
                 </div>
                 <div class="col-6">
                     <div class="de">
@@ -475,7 +475,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <img src="" alt="">
+                    <img src="img/historia/idiófonos/quijada.png" alt="">
                 </div>
             </div>
         </div>
@@ -484,7 +484,7 @@
             data-bs-parent="#collap1">
             <div class="row">
                 <div class="col-6">
-                    <img src="" alt="">
+                    <img src="img/historia/membranófonos/tinya.png" alt="">
                 </div>
                 <div class="col-6">
                     <div class="de">
@@ -517,13 +517,13 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <img src="" alt="">
+                    <img src="img/historia/membranófonos/tambor.png" alt="">
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-6">
-                    <img src="" alt="">
+                    <img src="img/historia/membranófonos/bombo.png" alt="">
                 </div>
                 <div class="col-6">
                     <div class="de">
