--- a/historia.html
+++ b/historia.html
@@ -135,10 +135,10 @@
         <div class="collapse multi-collapse" id="multiCollapseExample1" aria-labelledby="cabecera1"
             data-bs-parent="#collap1">
             <div class="row">
-                <div class="col-6">
-                    <img src="img/historia/aerofonos/fcaña.png" alt="">
+                <div class="col-md-6">
+                    <img class="img-fluid" src="img/historia/aerofonos/fcaña.png" alt="">
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="de">
                         <h2>Flauta de Caña</h2>
                         <br>
@@ -160,7 +160,7 @@
             </div>
             <br>
             <div class="row">
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="de">
                         <h2>Zampoña o Siku</h2>
                         <br>
@@ -176,16 +176,16 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-6">
-                    <img src="img/historia/aerofonos/zampoña.png" alt="">
+                <div class="col-md-6">
+                    <img class="img-fluid" src="img/historia/aerofonos/zampoña.png" alt="">
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-6">
-                    <img src="img/historia/aerofonos/antara.png" alt="">
+                <div class="col-md-6">
+                    <img class="img-fluid" src="img/historia/aerofonos/antara.png" alt="">
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="de">
                         <h2>Antara</h2>
                         <br>
