--- a/index.html
+++ b/index.html
@@ -36,20 +36,21 @@
         <div class="cont_banner">
             <img src="img/inicio/Banner.png" class="banner" alt="">
         </div>
-
-        <section class="Caja1">
-            <article class="articles1">
-                <h2 class="titulo_intro">Taki Kapchiy</h2>
-                    <p> Somos Taki Kapchiy una empresa dedicada a la promoción y venta de instrumentos andinos peruanos, aqui encontraras una gran diversidad de instrumentos segun sus categorias, además tendras opciones de personalización para cada uno de ellos y no solo eso, podras conocer la historia que hay detras de cada instrumento musical andino peruano.</p>
-                    <br>
-                    <p>
-                        Exploremos juntos las mas diversas melodias de los andes peruanos y todo lo que se puede llegar a crear con cada uno de nuestros instrumentos.
-                    </p>
-            </article>
-            <article class="img_article1">
-                <img src="img/inicio/vision1.jpg" class="intro" alt="">
-            </article>
-        </section>
+        <div class="container-fluid">
+            <div class="row align-items-center">
+                <div class="col-sm-12 col-md col-lg m-sm-auto m-md-3 m-lg-4 m-xl-5">
+                    <img src="img/inicio/vision1.jpg" class="img-fluid" height="500" width="100%" alt="">
+                </div>
+                <div class="col-sm-12 col-md col-lg m-sm-auto m-md-3 m-lg-4 m-xl-5">
+                    <h2 class="titulo_intro">Taki Kapchiy</h2>
+                        <p> Somos Taki Kapchiy una empresa dedicada a la promoción y venta de instrumentos andinos peruanos, aqui encontraras una gran diversidad de instrumentos segun sus categorias, además tendras opciones de personalización para cada uno de ellos y no solo eso, podras conocer la historia que hay detras de cada instrumento musical andino peruano.</p>
+                        <br>
+                        <p>
+                            Exploremos juntos las mas diversas melodias de los andes peruanos y todo lo que se puede llegar a crear con cada uno de nuestros instrumentos.
+                        </p>
+                </div>
+            </div>
+        </div>
         <div class="carrusel">
           <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -79,17 +80,19 @@
             </button>
           </div>
         </div>
-        <section class="Caja2">
-            <article class="articles2">
-                <h2>Misión</h2>
-                    <p align="justify">Brindar la mejor atención e instrumentos de calidad para todos nuestros clientes, así mismo un mejor sonido por parte de los instrumentos y diseños reveladores o vanguardistas para todo tipo de interesados. Además, que cualquier persona pueda adquirir estos productos a través de precios accesibles y tengan seguridad mediante nuestra garantía.</p>
-                <h2>Visión</h2>
-                    <p>Ser la empresa número uno en venta de instrumentos musicales a nivel nacional, manteniendo la calidad en el servicio y los productos que ofrecemos al público en general, asimismo mejorando e innovando constantemente para nuestros clientes. </p> 
-            </article>
-            <article class="img_article2">
-              <img src="img/inicio/mision.jpeg" class="mision_vision" alt="">
-            </article>
-        </section>
+        <div class="container-fluid">
+            <div class="row align-items-center">
+                <div class="col-md-12 col-md col-lg m-sm-auto m-md-3 m-lg-4 m-xl-5">
+                    <h2>Misión</h2>
+                        <p align="justify">Brindar la mejor atención e instrumentos de calidad para todos nuestros clientes, así mismo un mejor sonido por parte de los instrumentos y diseños reveladores o vanguardistas para todo tipo de interesados. Además, que cualquier persona pueda adquirir estos productos a través de precios accesibles y tengan seguridad mediante nuestra garantía.</p>
+                    <h2>Visión</h2>
+                        <p>Ser la empresa número uno en venta de instrumentos musicales a nivel nacional, manteniendo la calidad en el servicio y los productos que ofrecemos al público en general, asimismo mejorando e innovando constantemente para nuestros clientes. </p> 
+                </div>
+                <div class="col-md-12 col-md col-lg m-sm-auto m-md-3 m-lg-4 m-xl-5">
+                  <img src="img/inicio/mision.jpeg" class="img-fluid" height="500" width="100%" alt="">
+                </div>
+            </div>
+        </div>
         <div class="container">
             <div class="card">
                 <img src="img/inicio/Productos.png" alt="png" class="img-card">
