--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container-fluid">
             <div class="row align-items-center">
                 <div class="col-sm-12 col-md col-lg m-sm-auto m-md-3 m-lg-4 m-xl-5">
-                    <img src="img/inicio/vision1.jpg" class="img-fluid" width="100%" alt="">
+                    <img src="img/inicio/vision1.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-sm-12 col-md col-lg m-sm-auto m-md-3 m-lg-4 m-xl-5">
                     <h2 class="titulo_intro">Taki Kapchiy</h2>
@@ -81,14 +81,14 @@
           </div>
         </div>
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12 col-md col-lg m-sm-auto m-md-3 p-md-2 m-lg-4 m-xl-5">
+            <div class="row align-items-center">
+                <div class="col-md-5 col-md col-lg m-sm-auto m-md-3 m-lg-4 m-xl-5">
                     <h2>Misión</h2>
                         <p>Brindar la mejor atención e instrumentos de calidad para todos nuestros clientes, así mismo un mejor sonido por parte de los instrumentos y diseños reveladores o vanguardistas para todo tipo de interesados. Además, que cualquier persona pueda adquirir estos productos a través de precios accesibles y tengan seguridad mediante nuestra garantía.</p>
                     <h2>Visión</h2>
                         <p>Ser la empresa número uno en venta de instrumentos musicales a nivel nacional, manteniendo la calidad en el servicio y los productos que ofrecemos al público en general, asimismo mejorando e innovando constantemente para nuestros clientes. </p> 
                 </div>
-                <div class="col-md-12 col-md col-lg m-sm-auto m-md-3 m-lg-4 m-xl-5">
+                <div class="col-md-6 col-md col-lg m-sm-auto m-md-3 m-lg-4 m-xl-5">
                   <img src="img/inicio/mision.jpeg" class="img-fluid" width="100%" alt="">
                 </div>
             </div>
