--- a/index.html
+++ b/index.html
@@ -89,25 +89,25 @@
                         <p>Ser la empresa número uno en venta de instrumentos musicales a nivel nacional, manteniendo la calidad en el servicio y los productos que ofrecemos al público en general, asimismo mejorando e innovando constantemente para nuestros clientes. </p> 
                 </div>
                 <div class="col-md-6 col-md col-lg m-sm-auto m-md-3 m-lg-4 m-xl-5">
-                  <img src="img/inicio/mision.jpeg" class="img-fluid" width="100%" alt="">
+                  <img src="img/inicio/mision.jpeg" class="img-fluid" width="100%" height="" alt="">
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container-card">
             <div class="card">
-                <img src="img/inicio/Productos.png" alt="png" class="img-card">
+                <img src="img/inicio/Productos.png" alt="png" class="img-card-st">
                 <h2>Productos</h2>
                 <p>Encuentra una gran diversidad de instrumentos andinos en nuestro catalogo y se parte de este mundo de hermosas melodias que te transportan a paisajes insolitos y bellos momentos.</p>
                 <div class="area-button">
-                    <a class="btn" href="instrumentos.html">Ver más</a>
+                    <a class="boton-card" href="instrumentos.html">Ver más</a>
                 </div>
             </div>
             <div class="card">
-                <img src="img/inicio/Diseños.png" alt="" class="img-card">
+                <img src="img/inicio/Diseños.png" alt="" class="img-card-st">
                 <h2>Diseños</h2>
                 <p>Personaliza tu instrumento a gusto propio y dejate llevar por tu imaginación para crear tu instrumento andino con tu estilo propio y desenvolverte de gran manera al momento de utilizarlos.</p>
                 <div class="area-button">
-                    <a class="btn" href="instrumentos.html">Ver más</a>
+                    <a class="boton-card" href="instrumentos.html">Ver más</a>
                 </div>
             </div>
         </div>
