--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="card">
                 <img src="img/inicio/Diseños.png" alt="" class="img-card-st">
                 <h2>Diseños</h2>
-                <p>Personaliza tu instrumento a gusto propio y dejate llevar por tu imaginación para crear tu instrumento andino con tu estilo propio y desenvolverte de gran manera al momento de utilizarlos.</p>
+                <p>Una gran variedad de estilos y diseños los cuales te permitiran desenvolverte de gran manera al momento de utilizarlos.</p>
                 <div class="area-button">
                     <a class="boton-card" href="instrumentos.html">Ver más</a>
                 </div>
