--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <p>Ser la empresa número uno en venta de instrumentos musicales a nivel nacional, manteniendo la calidad en el servicio y los productos que ofrecemos al público en general, asimismo mejorando e innovando constantemente para nuestros clientes. </p> 
                 </div>
                 <div class="col-md-6 col-md col-lg m-sm-auto m-md-3 m-lg-4 m-xl-5">
-                  <img src="img/inicio/mision.jpeg" class="img-fluid" width="100%" height="" alt="">
+                  <img src="img/inicio/mision.jpeg" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
