--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="carrusel">
           <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="10000">
+              <div class="carousel-item active" data-bs-interval="2w000">
                 <img src="img/inicio/carrusel-3.png" class="d-block w-100" alt="..." width="100%" height="500">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
