--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <meta name="keywords" content="html, css">
     <meta name="description" content="Instrumentos, Andino, Historia, Diseños">
     <title>Taki Kapchiy La musica de los andes</title>
-    <link rel="shortcut icon" href="img/LOGO.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/inicio/LOGO x4.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="css/menu-bar.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/4edbf8ff12.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -143,11 +142,13 @@
             <p>Grupo Taki Kapchiy - Todos los derechos &copy; reservados  </p>
         </div>
         <div class="rs">
+            <p class="nr">Nuestras Redes Sociales:</p>
             <a href=""><img src="img/iconos/instagram.png" alt="instagram/png" class="ico-rs"></a>
             <a href=""><img src="img/iconos/facebook.png" alt="facebook/png" class="ico-rs"></a>
             <a href=""><img src="img/iconos/whatsapp.png" alt="whatsapp/png" class="ico-rs"></a>
         </div>
       </footer>
       <script src="js/bootstrap.js"></script>
+      <script src="https://kit.fontawesome.com/4edbf8ff12.js" crossorigin="anonymous"></script>
 </body>
 </html>
