--- a/instrumentos.html
+++ b/instrumentos.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Instrumentos</title>
+  <link rel="shortcut icon" href="img/inicio/LOGO x4.jpeg" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/menu-bar.css">
   <link rel="stylesheet" href="css/Instrumentos.css">
@@ -1039,6 +1040,7 @@
       <p>Grupo Taki Kapchiy - Todos los derechos &copy; reservados </p>
     </div>
     <div class="rs">
+      <p>Nuestras Redes Sociales: </p>
       <a href=""><img src="img/iconos/instagram.png" alt="instagram/png" class="ico-rs"></a>
       <a href=""><img src="img/iconos/facebook.png" alt="facebook/png" class="ico-rs"></a>
       <a href=""><img src="img/iconos/whatsapp.png" alt="whatsapp/png" class="ico-rs"></a>
