--- a/instrumentos.html
+++ b/instrumentos.html
@@ -1040,7 +1040,7 @@
       <p>Grupo Taki Kapchiy - Todos los derechos &copy; reservados </p>
     </div>
     <div class="rs">
-      <p>Nuestras Redes Sociales: </p>
+      <p class="nr">Nuestras Redes Sociales: </p>
       <a href=""><img src="img/iconos/instagram.png" alt="instagram/png" class="ico-rs"></a>
       <a href=""><img src="img/iconos/facebook.png" alt="facebook/png" class="ico-rs"></a>
       <a href=""><img src="img/iconos/whatsapp.png" alt="whatsapp/png" class="ico-rs"></a>
